fix overflow

--- a/Frontend/Climate-Frontend/src/App.css
+++ b/Frontend/Climate-Frontend/src/App.css
@@ -3,6 +3,8 @@ body {
   background-color: #fafafa;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .header {
@@ -207,11 +209,10 @@ button:active {
 }
 
 .App {
-  flex-direction: column;
-  align-items: center;
+
   margin: 0 auto;
   padding: 20px;
-  width: auto;
+
 
 }
 
